State of the code update
README updates and intended next steps for codebase